# sql-compiler

./: .clang-format  .envrc  .gitignore  CMakeLists.txt  Makefile  README.md  test.json  test.sql
antlrsandbox/: Chat.g4  ChatLexer.py  ChatListener.py  ChatParser.py  HtmlChatListener.py  Makefile  chat.txt  main.py  output.html  pyproject.toml
antlrsandbox/antlrsandbox/: func.py  main.py
antlrsandbox/antlrsandbox/tests/: test_func.py  test_main.py
apps/: CMakeLists.txt  app_main.cpp
docs/: CMakeLists.txt  mainpage.md  simple-select.json
include/mylib/: lib.hpp  parser.hpp
python/: .envrc  Makefile  pyproject.toml
python/compiler/: ast.py  astfactory.py  main.py  parser.py  tokenizer.py
python/compiler/parser/: parser.py  tokenizer.py
python/tests/: test_parser.py
pythonsql/: Makefile  pyproject.toml
pythonsql/pythonsql/: astfactory.py  main.py  parser.py  tokenizer.py
pythonsql/pythonsql/tests/: test_func.py  test_main.py
pythonsql/tests/: test_parser.py  test_tokenizer.py
src/: CMakeLists.txt  ast.hpp  lexer.l  lib.cpp  main.cpp  parser.cpp  parser.y
tests/: CMakeLists.txt  test_mylib.cpp
