[tool.poetry]
name = "antlrsandbox"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.scripts]
antlrsandbox-main = "antlrsandbox.main:main"

[tool.poetry.dependencies]
python = "^3.8"
antlr4-python3-runtime = "^4.9.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
